<resources>
    <string name="app_name">ESMira</string>
    <string name="add">Add</string>
    <string name="add_a_study">Join a new study</string>
    <string name="additional_notification_settings_general_android">In the following screen, please make sure that ESMira is allowed to run in the background and is able to start when rebooting the phone. Unfortunately the names of the settings (and which settings actually exist) vary greatly between phone models and we do not have any screenshots for this phone model to assist you further. So please try to guess the appropriate settings. If you want to help us out and send us some screenshots, please contact the App developer (esmira@kl.ac.at).
\n
\nAfter you are done, press the back-key on your phone to return to this screen.</string>
    <string name="additional_notification_settings_esmi">In the upcoming screen find ESMira in the list of apps and make sure it has the permission to Autostart.</string>
    <string name="additional_notification_settings_huaweiV2_1">In the following screen, please find ESMira in the list of apps and make sure it is \"Manually managed\".</string>
    <string name="additional_notification_settings_huaweiV2_2">In the upcoming screen make sure ESMira has the permission for \"Auto-Launch\" and \"Run in background\".</string>
    <string name="additional_notification_settings_samsung_1">In the upcoming screen wait until \"Checking\" is complete and scroll down to the bottom of the page.</string>
    <string name="additional_notification_settings_samsung_2">At the bottom of the page select on \"Unmonitored apps\".</string>
    <string name="additional_notification_settings_samsung_3">In the following screen press the \"Add apps\" button. Then select ESMira in the list and press \"OK\".</string>
    <string name="additional_notification_settings_zte_blade_3_1">In the upcoming screen select \"Battery optimization\".</string>
    <string name="additional_notification_settings_zte_blade_3_2">Then open the dropdown menu and select \"All apps\".</string>
    <string name="additional_notification_settings_zte_blade_3_3">Now search the list for \"ESMira\", click on it, select \"Don\'t optimize\" and press \"Done\".</string>
    <string name="additional_notification_settings_zte_blade_l110_1">In the upcoming screen select \"Battery\".</string>
    <string name="additional_notification_settings_zte_blade_l110_2">Then select \"HeartBeat Sync Settings\".</string>
    <string name="additional_notification_settings_zte_blade_l110_3">Now search the list for \"ESMira\", and make sure that the checkbox is enabled.</string>
    <string name="additional_notification_settings_finish">After you are done, press the back-key on your phone to return to this screen.</string>
    <string name="android_version">Version: %1$s, %2$s</string>
    <string name="ask_model_settings_correct">Were you able to adjust the settings as instructed\?</string>
    <string name="ask_notification_posted">Did you receive a notification\?</string>
    <string name="back">Back</string>
    <string name="backup">Backup</string>
    <string name="cancel">Cancel</string>
    <string name="change_schedules">Change schedules</string>
    <string name="close">Close</string>
    <string name="complete">Complete</string>
    <string name="android_contact_email">Contact %1$s</string>
    <string name="contentDesc_more_studies">Opens an option menu for this study.</string>
    <string name="continue_">Continue</string>
    <string name="consent">Consent</string>
    <string name="contact_researcher">Contact researcher</string>
    <string name="colon_accessCode">Access code:</string>
    <string name="colon_enter_manually">Enter manually:</string>
    <string name="colon_next_expected_notification">Next expected notification:</string>
    <string name="colon_password">Password:</string>
    <string name="delete_statistics">Delete statistics</string>
    <string name="delete_">Delete</string>
    <string name="desc_update_schedules">Change the schedules of your studies</string>
    <string name="desc_update_studies">Update the settings of your studies</string>
    <string name="dialogTitle_delete_statistics">Delete statistics\?</string>
    <string name="dialogDesc_delete_statistics">Do you want to delete all statistics for this study\?</string>
    <string name="dialogTitle_leave_study">Leave study\?</string>
    <string name="dialogDesc_leave_study">Do you want to leave this study\? You will loose all your progress in the study.</string>
    <string name="android_email_study_subject">Regarding your study: %1$s</string>
    <string name="enter_manually">Enter manually</string>
    <string name="enable">Enable</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="error_app_update_needed_title">ESMira update.</string>
    <string name="error_app_update_needed_msg">A critical update was found. Please update ESMira in the app store.</string>
    <string name="android_error_general">Error: %1$s</string>
    <string name="error_input">Broken input</string>
    <string name="error_loading_failed">Loading failed…</string>
    <string name="error_missing_fields">Please fill out all required fields!</string>
    <string name="error_no_email_client">Could not find an email-app…</string>
    <string name="error_no_images_to_upload">You have not selected any images to upload.</string>
    <string name="error_notifications_broken_android_desc">Unfortunately some smartphone models also have hidden settings which are necessary to allow background notifications.</string>
    <string name="error_notifications_broken_android_header">ESMira is not able not send notifications!</string>
    <string name="error_notifications_broken_android_dontkillmyapp">In case this dialog is not helpful to you, you can also visit <a href="https://dontkillmyapp.com/">dontkillmyapp.com</a> for more information.</string>
    <string name="error_notifications_broken_android_footer">Do you need further assistance or you want to help us to incorporate more information (Screenshots, descriptions) on your device model into ESMira\? Write us an email to: <a href="mailto:esmira@kl.ac.at">esmira@kl.ac.at</a>.</string>
    <string name="error_notifications_broken_android_model_settings">The following device settings were found for your phone:</string>
    <string name="error_schedule_time_window_too_small">Please choose a bigger time window!</string>
    <string name="error_settings_not_opened">Could not open settings!</string>
    <string name="hint_error_comment">What problem did you encounter\?</string>
    <string name="hint_message">Message</string>
    <string name="hint_server">example.com</string>
    <string name="https">https://</string>
    <string name="i_agree">I agree</string>
    <string name="ignore">Ignore</string>
    <string name="in_x_days">in %1$d days</string>
    <string name="android_info_copied_x_to_clipboard">Copied \"%1$s\" to clipboard</string>
    <string name="info_detected_x_errors">Detected %1$d errors in total</string>
    <string name="info_dev_active">You are a developer now!</string>
    <string name="info_dev_inactive">Developer mode disabled</string>
    <string name="info_error_report_desc">Please help us solving your problem and send this error report to us. Thank you!</string>
    <string name="info_error_report_header">A critical error was detected!</string>
    <string name="info_leave_empty_if_unsure">(can be left empty)</string>
    <string name="info_loading">Loading…</string>
    <string name="info_message_sent">Message has been sent</string>
    <plurals name="android_info_missed_notifications" comment="Needs to be short">
        <item quantity="one">1 missed notification.</item>
        <item quantity="other">%1$d missed notifications.</item>
    </plurals>
    <string name="info_model_settings">To ensure that ESMira can issue notifications from the background, some special settings are necessary for your phone model. Tap \"Open device specific setup\" below to open your phone settings.</string>
    <string name="info_new_message">You got a new message!</string>
    <string name="info_no_errors">No errors to report</string>
    <string name="info_no_messages">There are no messages.</string>
    <string name="info_no_model_settings">No device settings were found.</string>
    <string name="info_no_studies_noAccessKey">Could not find public studies on this server.</string>
    <string name="android_info_no_studies_withAccessKey">Could not find studies with the access key \"%1$s\" on this server.</string>
    <string name="info_no_schedules">No schedules to change.</string>
    <string name="info_no_statistics">No statistics to display.</string>
    <string name="info_no_studies_joined">You have not joined any study.</string>
    <string name="info_no_questionnaires">No questionnaires are available at the moment…</string>
    <string name="info_nothing_to_sync">Nothing to sync</string>
    <string name="info_notification_additional_settings">Please make sure that
\n[1] your phone is not muted,
\n[2] notifications for ESMira are enabled and
\n[3] \"Do not disturb\"-mode (if available on your phone) is disabled:</string>
    <string name="info_notification_setup_failed">It is very likely that your phone will not be able to receive notifications for this study. Your phone may have special settings that we are not aware of. Please contact the researcher of the study or the app developer (and mention the phone model you are using) to find a solution for your problem.</string>
    <string name="info_number_to_sync">You have %1$d unsynced datasets</string>
    <string name="info_questionnaire_success">Your entries were saved successfully!</string>
    <string name="info_required">* input required</string>
    <string name="info_schedule_changed_after_one_day">Your changes will take effect after one day.</string>
    <string name="info_study_permissionSetup_ended">The configuration has been completed. You can now click on \"Participate\" to join the study.</string>
    <string name="android_info_study_updated">%1$s was updated!</string>
    <string name="info_study_updated_desc">Your schedules have been reset due to an update to the study.</string>
    <string name="messages">Messages</string>
    <string name="load_backup">Load backup</string>
    <string name="next_notifications">Next notifications</string>
    <string name="no">No</string>
    <string name="notifications_not_working">Notifications are not working\?</string>
    <string name="ok_">OK</string>
    <string name="open_doNotDisturb_settings">Open \"Do Not Disturb\" settings</string>
    <string name="open_notification_settings">Open notification settings</string>
    <string name="open_sound_settings">Open sound settings</string>
    <string name="questionnaires">Questionnaires</string>
    <string name="questionMark">\?</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="send_error_report">Send error report</string>
    <string name="settings">Settings</string>
    <string name="show_welcome_screen">Show welcome screen</string>
    <string name="statistics">Statistics</string>
    <string name="try_again">Try again</string>
    <string name="update_studies">Update studies</string>
    <string name="welcome_first_instructions">Welcome to ESMira, the anonymous Questionnaire Assistant.
\n
\nIn order to start please select a study and join.
\nThis dialog will assist you.</string>
    <string name="welcome_hello">Hello!</string>
    <string name="welcome_qr_question">Do you have a QR code for a study\?</string>
    <string name="what_for">What for\?</string>
    <string name="what_is_sent">What is sent\?</string>
    <string name="yes">Yes</string>
    <string name="failed">Failed</string>
    <string name="rewards">Rewards</string>
</resources>