<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.Preference
        android:key="change_schedules_box"
        android:icon="@drawable/ic_schedule_24dp"
        android:title="@string/change_schedules"
        android:summary="@string/desc_update_schedules"
        android:persistent="false"/>

    <androidx.preference.Preference
        android:key="btn_update_studies"
        android:icon="@drawable/ic_update_24dp"
        android:title="@string/update_studies"
        android:summary="@string/desc_update_studies"
        android:persistent="false"/>

    <androidx.preference.Preference
        android:key="btn_sync_now"
        android:icon="@drawable/ic_sync_24dp"
        android:title="@string/sync_now"
        android:summary="@string/info_nothing_to_sync"
        android:persistent="false"/>

    <!--<androidx.preference.Preference-->
    <!--android:key="btn_review_features"-->
    <!--android:icon="@drawable/ic_features_black_24dp"-->
    <!--android:title="@string/btn_review_features"-->
    <!--android:summary="@string/desc_review_features"-->
    <!--android:persistent="false"/>-->

    <androidx.preference.Preference
        android:key="btn_backup"
        app:isPreferenceVisible="false"
        android:icon="@drawable/ic_backup_24dp"
        android:title="@string/backup"
        android:persistent="false"/>

    <androidx.preference.Preference
        android:key="btn_load_backup"
        app:isPreferenceVisible="false"
        android:icon="@drawable/ic_load_backup_24dp"
        android:title="@string/load_backup"
        android:persistent="false"/>

    <androidx.preference.Preference
        android:key="btn_next_notification"
        app:isPreferenceVisible="false"
        android:icon="@drawable/ic_schedule_24dp"
        android:title="@string/next_notifications"
        android:persistent="false"/>
    
    <androidx.preference.Preference
        android:key="btn_show_welcome"
        app:isPreferenceVisible="false"
        android:icon="@drawable/ic_play_arrow_24dp"
        android:title="@string/show_welcome_screen"
        android:persistent="false"/>
    
    <androidx.preference.Preference
        android:key="btn_notificationsBroken"
        android:icon="@drawable/ic_notifications_broken_24dp"
        android:title="@string/notifications_not_working"
        android:persistent="false"/>

    <androidx.preference.Preference
        android:key="btn_send_errors"
        android:icon="@drawable/ic_bug_report_24dp"
        android:title="@string/send_error_report"
        android:summary="@string/info_no_errors"
        android:persistent="false"/>


    <androidx.preference.PreferenceCategory
        android:persistent="false"/>

    <androidx.preference.Preference
        android:key="user_id"
        android:layout="@layout/item_preference_text_copyable"
        android:persistent="false"/>

    <androidx.preference.Preference
        android:key="app_version"
        android:layout="@layout/item_preference_text"
        android:persistent="false"
        app:selectable="false"/>



</androidx.preference.PreferenceScreen>