<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android">
	<!--<item-->
		<!--android:id="@+id/navigation_add_server"-->
		<!--android:icon="@drawable/ic_add_circle_black_24dp"-->
		<!--android:title="@string/title_add_study"/>-->
	<!---->
	<item
		android:id="@+id/navigation_questionnaire"
		android:icon="@drawable/ic_home_24dp"
		android:title="@string/questionnaires"/>
	
	<item
		android:id="@+id/navigation_statistics"
		android:icon="@drawable/ic_chart_24dp"
		android:title="@string/statistics"/>
	
	<item
		android:id="@+id/navigation_messages"
		android:icon="@drawable/ic_messages_24dp"
		android:title="@string/messages"/>
	
	<item
		android:id="@+id/navigation_rewards"
		android:icon="@drawable/ic_reward_black_24"
		android:title="@string/rewards"/>
	
	<item
		android:id="@+id/navigation_settings"
		android:icon="@drawable/ic_settings_24dp"
		android:title="@string/settings"/>

</menu>
