<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	
	<TextView
		android:id="@+id/instructions"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="16sp"
		android:text="@string/info_notification_additional_settings"/>
	
	<Button
		style="@style/AppTheme.DefaultButton"
		android:id="@+id/btn_open_sound_settings"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:gravity="start"
		android:text="@string/open_sound_settings"
		app:icon="@drawable/ic_number_one_accent_24dp"/>
	<Button
		style="@style/AppTheme.DefaultButton"
		android:id="@+id/btn_open_notification_settings"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:gravity="start"
		android:text="@string/open_notification_settings"
		app:icon="@drawable/ic_number_two_accent_24dp"/>
	<Button
		style="@style/AppTheme.DefaultButton"
		android:id="@+id/btn_open_doNotDisturb_settings"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:gravity="start"
		android:text="@string/open_doNotDisturb_settings"
		app:icon="@drawable/ic_number_three_accent_24dp"/>
	
	<Button
		style="@style/AppTheme.DefaultButton"
		android:id="@+id/btn_try_again"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/try_again"/>
	
	<Button
		style="@style/AppTheme.DefaultButton"
		android:id="@+id/btn_ignore"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/ignore"/>

</LinearLayout>