<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<ScrollView
		android:id="@+id/root_view"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:paddingStart="15dp"
		android:paddingLeft="15dp"
		android:paddingEnd="15dp"
		android:paddingRight="15dp"
		android:fillViewport="true">
		<LinearLayout
			android:id="@+id/animationRoot"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="10dp"
			android:paddingBottom="10dp">
			
			<at.jodlidev.esmira.NotificationsPermission
				android:id="@+id/additionalSettings"
				android:visibility="gone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				custom:fixedPosition="additionalSettings"/>
			
			<TextView
				android:id="@+id/header"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="10dp"
				android:paddingBottom="5dp"
				android:textStyle="bold"
				android:text="@string/error_notifications_broken_android_header"/>
			<TextView
				android:id="@+id/desc"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="10dp"
				android:text="@string/error_notifications_broken_android_desc"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:text="@string/error_notifications_broken_android_model_settings"/>
			
			<at.jodlidev.esmira.NotificationsPermission
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				custom:fixedPosition="modelSettings"/>
			
			
			<TextView
				android:id="@+id/dontkillmyapp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:text="@string/error_notifications_broken_android_dontkillmyapp"/>
			
			
			<TextView
				android:id="@+id/footer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:text="@string/error_notifications_broken_android_footer"/>
		</LinearLayout>
	</ScrollView>
	
	<Button
		style="@style/AppTheme.DialogButton"
		android:id="@+id/btn_ok"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/ok_"/>
</LinearLayout>
