<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/root_view"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingStart="15dp"
	android:paddingLeft="15dp"
	android:paddingEnd="15dp"
	android:paddingRight="15dp"
	android:fillViewport="true">
	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/animationRoot"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp"
		android:animateLayoutChanges="true">
		<TextView
			android:id="@+id/header"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="10dp"
			android:paddingBottom="5dp"
			android:text="@string/info_error_report_header"
			android:textStyle="bold"
			android:textSize="18sp"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>
		<TextView
			android:id="@+id/desc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:text="@string/info_error_report_desc"
			android:textSize="18sp"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@id/header"/>
		
		<EditText
			android:id="@+id/comment"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:lines="5"
			android:singleLine="false"
			android:inputType="textMultiLine"
			android:hint="@string/hint_error_comment"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@id/desc"/>
		
		
		
		<Button
			style="@style/AppTheme.DialogButton"
			android:id="@+id/btn_send_data"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:textSize="12sp"
			android:text="@string/what_is_sent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/comment"/>
		<Button
			style="@style/AppTheme.DialogButton"
			android:id="@+id/btn_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@android:string/cancel"
			app:layout_constraintRight_toLeftOf="@id/btn_send"
			app:layout_constraintTop_toBottomOf="@id/btn_send_data"/>
		
		<Button
			style="@style/AppTheme.DialogButton"
			android:id="@+id/btn_send"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@string/send"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/btn_send_data"/>
		
		
	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>