<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingTop="15dp"
	android:paddingLeft="25dp"
	android:paddingRight="25dp">
	
	<TextView
		android:id="@+id/header_server"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textStyle="bold"
		android:text="@string/colon_enter_manually"
		android:labelFor="@id/server_text"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
	<TextView
		android:id="@+id/server_text_before"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/https"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="@id/server_text"
		app:layout_constraintBottom_toBottomOf="@id/server_text"/>
	
	<EditText
		android:id="@+id/server_text"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:inputType="textUri"
		android:hint="@string/hint_server"
		android:text=""
		android:autofillHints="server"
		app:layout_constraintLeft_toRightOf="@id/server_text_before"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/header_server"/>
</androidx.constraintlayout.widget.ConstraintLayout>