<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	
	<TextView
		android:id="@+id/header_ask_model_settings"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/ask_model_settings_correct"
		android:textSize="16sp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
	<Button
		style="@style/AppTheme.DefaultButton"
		android:id="@+id/btn_no"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/no"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toLeftOf="@id/btn_yes"
		app:layout_constraintTop_toBottomOf="@id/header_ask_model_settings"/>
	<Button
		style="@style/AppTheme.DefaultButton"
		android:id="@+id/btn_yes"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginLeft="10dp"
		android:layout_marginStart="10dp"
		android:text="@string/yes"
		app:layout_constraintLeft_toRightOf="@id/btn_no"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/header_ask_model_settings"/>
</androidx.constraintlayout.widget.ConstraintLayout>