<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingTop="10dp"
	android:paddingBottom="10dp"
	android:animateLayoutChanges="true">
	
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content">
		<TextView
			android:id="@+id/num"
			android:layout_width="25dp"
			android:layout_height="wrap_content"
			tools:text="1"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/header"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:lines="1"
			android:singleLine="true"
			android:maxLines="1"
			tools:text="Header"
			android:textSize="20sp"
			android:drawablePadding="10dp"/>
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/btn_whatFor"
			style="@style/AppTheme.UnimportantButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/what_for"
			android:textSize="12sp"/>
		<ImageView
			android:id="@+id/completed"
			android:visibility="gone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:src="@drawable/ic_success_green_24dp"
			android:contentDescription="@string/complete"/>
		<ImageView
			android:id="@+id/failed"
			android:visibility="gone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:src="@drawable/ic_failed_red_24dp"
			android:contentDescription="@string/failed"/>
	
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/content"
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
	</LinearLayout>
</LinearLayout>