<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	style="@style/AppTheme.ViewContainer"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<LinearLayout
		android:id="@+id/logo_line"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:src="@mipmap/ic_launcher_round"/>
		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textSize="32sp"
			android:textStyle="bold"
			android:text="@string/welcome_hello"/>
	</LinearLayout>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:text="@string/welcome_first_instructions"
		android:textSize="@dimen/welcome_textSize"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/logo_line"/>
	
	<View
		android:layout_width="0dp"
		android:layout_height="1dp"
		android:background="@color/colorPrimaryDark"
		app:layout_constraintBottom_toTopOf="@id/btn_next"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"/>
	
	<Button
		style="@style/AppTheme.DialogButton"
		android:id="@+id/btn_next"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/continue_"
		app:icon="@drawable/ic_next_accent_24dp"
		app:iconGravity="end"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>